--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "firebase-admin": "^11.11.1",
         "jest": "^29.6.1",
         "jest-extended": "^4.0.0",
+        "jest-text-transformer": "^1.0.4",
         "nanoid": "^4.0.2",
         "nodemon": "^2.0.22",
         "pretty-ms": "^8.0.0",
