--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -8,7 +8,7 @@
         "lint": "eslint src"
     },
     "license": "MIT",
-    "description": "The CSS language/framework for rapidly building modern and high-performance websites",
+    "description": "The CSS language and framework for rapidly building modern and high-performance websites",
     "author": "Aoyue Design LLC.",
     "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
