Update GitHub Actions workflows

--- a/.github/workflows/commit-check.yml
+++ b/.github/workflows/commit-check.yml
@@ -13,10 +13,10 @@ on:
 jobs:
     check:
         name: "commit-check"
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [18.17.0]
+                node-version: [20]
         steps:
             - uses: actions/checkout@v3
               with:
@@ -24,7 +24,7 @@ jobs:
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
-            - uses: actions/setup-node@v3
+            - uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'pnpm'
