--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,16 +12,16 @@ on:
 
 jobs:
     lint:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [18.17.0]
+                node-version: [20]
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
-            - uses: actions/setup-node@v3
+            - uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'pnpm'
