--- a/.github/workflows/pull-request-title-check.yml
+++ b/.github/workflows/pull-request-title-check.yml
@@ -9,10 +9,10 @@ on:
 
 jobs:
     check:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [18.17.0]
+                node-version: [20]
         steps:
             - name: Aron Actions
               uses: 1aron/techor@v2.5.17
