--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
                   node-version: 20
                   cache: "pnpm"
             - run: pnpm install
-            - run: pnpm install semantic-release-config-techor
+            - run: pnpm install semantic-release-config-techor --workspace-root
             - run: pnpm run build
             - uses: lewagon/wait-on-check-action@v1.3.1
               with:
