Update descriptions and align wording in various files

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,7 +6,7 @@
         "eslintconfig"
     ],
     "license": "MIT",
-    "description": "Master CSS ESLint Plugin Config",
+    "description": "Master CSS ESLint Config",
     "author": "Aoyue Design LLC.",
     "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
