--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -8,7 +8,7 @@
         "test": "jest"
     },
     "license": "MIT",
-    "description": "Pre-renders and injects HTML-required CSS",
+    "description": "Pre-render and inject document-required Master CSS",
     "author": "Aoyue Design LLC.",
     "funding": "https://css.master.co/docs/donate",
     "homepage": "https://css.master.co",
