Add react-countup package and update Bar component

--- a/website/package.json
+++ b/website/package.json
@@ -31,6 +31,7 @@
         "monaco-textmate": "^3.0.1",
         "next": "14.1.0",
         "react": "^18",
+        "react-countup": "^6.5.0",
         "react-dom": "^18",
         "react-intersection-observer": "^9.5.3",
         "theme-service": "workspace:^",
