--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -1,10 +1,21 @@
 {
     "type": "module",
+    "scripts": {
+        "extract": "hyperfine 'cd extract/tailwindcss && npx tailwindcss -i src/main.css' 'cd extract/mastercss && npx mastercss extract --no-export'"
+    },
     "dependencies": {
         "@techor/log": "^2.6.3",
         "axios": "^1.6.7",
         "cheerio": "0.22.0",
         "filesize": "^10.1.0",
-        "pretty-bytes": "^6.1.1"
+        "tinybench": "^2.6.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.33",
+        "tailwindcss": "^3.4.1",
+        "@master/css": "workspace:^",
+        "@master/css-runtime": "workspace:^",
+        "@master/extractor": "workspace:^"
     }
 }
