--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "shuffle-array": "^1.0.1",
         "spawnd": "^9.0.0",
         "strip-ansi": "^7.1.0",
+        "tinybench": "^2.6.0",
         "ts-dedent": "^2.2.0",
         "ts-jest": "^29.1.1",
         "tsx": "^3.12.7"
