Remove unused files and update test framework

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -7,7 +7,7 @@
         "build:cjs": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.js\" --bundle --format cjs --no-clean",
         "build:type": "tsc --emitDeclarationOnly --declaration --outDir dist",
         "dev": "pnpm run \"/^build:(?!type)/\" --watch",
-        "test": "jest",
+        "test": "playwright test",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
     },
@@ -55,5 +55,8 @@
     },
     "dependencies": {
         "@master/css": "workspace:^"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.41.2"
     }
 }
