Add e2e to check-regexp in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
                   ref: ${{ github.ref }}
                   running-workflow-name: wait-for-check-regexp
                   # todo: example-check
-                  check-regexp: lint|test|commit-check|type-check
+                  check-regexp: lint|test|commit-check|type-check|e2e
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
                   wait-interval: 10
             - run: pnpm exec semantic-release
