--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,4 @@
-name: Test
+name: E2E
 on:
     push:
         branches:
@@ -11,7 +11,7 @@ on:
             - synchronize
 
 jobs:
-    test:
+    e2e:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
