--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -44,6 +44,7 @@
         "**/*.tsx",
         "**/*.mjs",
         "**/*.mdx",
-        "../../*.d.ts"
+        "../../*.d.ts",
+        "**/tests/**/*"
     ],
 }
