--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
         "@firebase/firestore": "^4.3.2",
         "@master/css": "workspace:^",
         "@master/css-extractor": "workspace:^",
+        "@master/css-server": "workspace:^",
         "@master/css-language-service": "workspace:^",
         "@master/css-renderer": "workspace:^",
         "@master/css.react": "workspace:^",
@@ -39,10 +40,15 @@
     },
     "devDependencies": {
         "@builder.io/partytown": "^0.8.2",
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
+        "@types/jest": "^29.5.11",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "typescript": "^5"
     }
 }
