Update GitHub e2e Actions workflow

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,6 +23,6 @@ jobs:
                     node-version: 20
                     cache: 'pnpm'
             - run: pnpm install
-            - run: pnpm exec playwright install
+            - run: pnpm exec playwright install --with-deps
             - run: pnpm run build
             - run: pnpm e2e
