--- a/package.json
+++ b/package.json
@@ -21,40 +21,37 @@
         "type": "git",
         "url": "https://github.com/master-co/css.git"
     },
-    "devDependencies": {
+    "dependencies": {
         "@google-cloud/storage": "^7.7.0",
         "@master/css": "workspace:^",
+        "@master/css-cli": "workspace:^",
         "@master/css-extractor": "workspace:^",
         "@master/css-extractor.vite": "workspace:^",
-        "@master/css-cli": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
-        "@swc-node/jest": "^1.6.8",
-        "@techor/fs": "^2.5.24",
-        "@techor/glob": "^2.5.24",
-        "@techor/jest-dom": "^2.5.24",
-        "@techor/repo": "^2.5.24",
-        "@types/node": "^20.4.0",
-        "@types/node-fetch": "^2.6.10",
+        "@swc-node/jest": "^1.7.0",
+        "@techor/fs": "^2.6.5",
+        "@techor/glob": "^2.6.5",
+        "@techor/jest-dom": "^2.6.5",
+        "@techor/repo": "^2.6.5",
+        "@types/node-fetch": "^2.6.11",
         "@types/shuffle-array": "^1.0.5",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "1.0.0-rc.12",
         "cross-env": "^7.0.3",
         "css-shared": "workspace:^",
-        "fast-glob": "^3.2.12",
+        "fast-glob": "^3.3.2",
         "firebase-admin": "^11.11.1",
-        "jest": "^29.7.0",
-        "jest-extended": "^4.0.0",
+        "jest-extended": "^4.0.2",
         "jest-text-transformer": "^1.0.4",
         "nanoid": "^4.0.2",
         "nodemon": "^2.0.22",
         "normalize-newline": "^4.1.0",
         "pretty-ms": "^8.0.0",
         "shuffle-array": "^1.0.1",
-        "spawnd": "^9.0.0",
+        "spawnd": "^9.0.2",
         "strip-ansi": "^7.1.0",
         "tinybench": "^2.6.0",
         "ts-dedent": "^2.2.0",
-        "ts-jest": "^29.1.1",
-        "tsx": "^3.12.7"
+        "tsx": "^3.14.0"
     },
     "resolutions": {
         "@semantic-release/commit-analyzer": "11.0.0"
