--- a/packages/create/.gitignore
+++ b/packages/create/.gitignore
@@ -1,3 +1,4 @@
-**/*master.css.ts
-**/*master.css-extractor.ts
+**/*master.css.*
 **/my-app/**
+tests/with-no-deps/package.json
+tests/with-deps/package.json
