--- a/examples/svelte-with-runtime-rendering/package.json
+++ b/examples/svelte-with-runtime-rendering/package.json
@@ -14,16 +14,16 @@
         "@master/css.svelte": "workspace:^"
     },
     "devDependencies": {
-        "@fontsource/fira-mono": "^4.5.10",
-        "@neoconfetti/svelte": "^1.0.0",
-        "@sveltejs/adapter-auto": "^2.0.0",
-        "@sveltejs/kit": "^1.22.4",
-        "@types/cookie": "^0.5.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-        "tslib": "^2.4.1",
-        "typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"@fontsource/fira-mono": "^4.5.10",
+		"@neoconfetti/svelte": "^1.0.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3"
     },
     "type": "module"
 }
